# Distributed-storage

./: platformio.ini
Node/: platformio.ini
Node/include/: codes.h  sdCrud.h
Node/src/: Test.code-workspace  main.cpp  sdCrud.h
Node/test/: sd_tests.cpp
src/: main.cpp
storage-cli/: Cargo.toml  node_config.json
storage-cli/src/: config.rs  lib.rs  main.rs
