[package]
name = "storage-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
reqwest = {version= "0.11.23", features = ["stream", "multipart"]}
serde_json = "1.0.111"
serde_yaml = "0.9.30"
serde = {version="1.0.99", features=["derive"]}
tokio = {version="1.35.1", features = ["full"]}
tokio-util = { version = "0.6", features = ["codec"] }