[package]
name = "storage-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
reqwest = {version= "0.11.23", features = ["stream", "multipart", "blocking"]}
serde_json = "1.0.111"
serde_yaml = "0.9.30"
serde = {version="1.0.99", features=["derive"]}
chrono = "0.4.33"
